--- a/litmus/rbac.yaml
+++ b/litmus/rbac.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: sock-shop-chaos-engine
+  namespace: sock-shop
   labels:
     app: sock-shop
 ---
