--- a/litmus/rbac.yaml
+++ b/litmus/rbac.yaml
@@ -7,24 +7,26 @@ metadata:
   labels:
     app: sock-shop
 ---
-kind: ClusterRole
+kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: sock-shop-chaos-engine
+  namespace: sock-shop
 rules:
-- apiGroups: ["", "extensions", "apps", "batch", "litmuschaos.io"]
-  resources: ["daemonsets", "deployments", "replicasets", "jobs", "pods", "pods/exec","nodes","events", "chaosengines", "chaosexperiments", "chaosresults"]
-  verbs: ["*"]
+- apiGroups: ["", "apps", "batch", "litmuschaos.io"]
+  resources: ["daemonsets", "jobs", "pods", "pods/exec", "chaosengines", "chaosexperiments", "chaosresults"]
+  verbs: ["create","list","get","patch","update","delete"]
 ---
-kind: ClusterRoleBinding
+kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: sock-shop-chaos-engine
+  namespace: sock-shop
 roleRef:
-  kind: ClusterRole
+  kind: Role
   name: sock-shop-chaos-engine
   apiGroup: rbac.authorization.k8s.io
 subjects:
 - kind: ServiceAccount
   name: sock-shop-chaos-engine
-  namespace: sock-shop # App namespace
+  namespace: sock-shop 
