Updated load test and chaos experiments deployments

--- a/deploy/sock-shop.yaml
+++ b/deploy/sock-shop.yaml
@@ -737,4 +737,4 @@ spec:
       containers:
         - name: user-load
           image: weaveworksdemos/load-test
-          args: ["-h", "front-end:80"]
+          args: ["-h", "front-end:80", "-r", "1000"]
