--- a/litmus/rbac.yaml
+++ b/litmus/rbac.yaml
@@ -13,9 +13,9 @@ metadata:
   name: sock-shop-chaos-engine
   namespace: sock-shop
 rules:
-- apiGroups: ["", "apps", "batch", "litmuschaos.io"]
-  resources: ["daemonsets", "jobs", "pods", "pods/exec", "chaosengines", "chaosexperiments", "chaosresults"]
-  verbs: ["create","list","get","patch","update","delete"]
+- apiGroups: ["", "extensions", "apps", "batch", "litmuschaos.io"]
+  resources: ["daemonsets", "deployments", "replicasets", "jobs", "pods", "pods/exec","nodes","events", "chaosengines", "chaosexperiments", "chaosresults"]
+  verbs: ["*"]
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
