--- a/deploy/litmus-rbac.yaml
+++ b/deploy/litmus-rbac.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     app: sock-shop
 ---
-kind: Role
+kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: sock-shop-chaos-engine
@@ -17,13 +17,13 @@ rules:
   resources: ["daemonsets", "deployments", "replicasets", "jobs", "pods", "pods/exec","nodes","events", "chaosengines", "chaosexperiments", "chaosresults"]
   verbs: ["*"]
 ---
-kind: RoleBinding
+kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: sock-shop-chaos-engine
   namespace: sock-shop
 roleRef:
-  kind: Role
+  kind: ClusterRole
   name: sock-shop-chaos-engine
   apiGroup: rbac.authorization.k8s.io
 subjects:
