add ephemeral storage resource requests/limits in the carts-db deploy
Signed-off-by: ksatchit <karthik.s@mayadata.io>

--- a/deploy/sock-shop.yaml
+++ b/deploy/sock-shop.yaml
@@ -27,6 +27,11 @@ spec:
         ports:
         - name: mongo
           containerPort: 27017
+        resources:
+          requests:
+            ephemeral-storage: "1Gi"
+          limits:
+            ephemeral-storage: "2Gi"
         securityContext:
           capabilities:
             drop:
