--- a/litmus/disk-fill.yaml
+++ b/litmus/disk-fill.yaml
@@ -30,4 +30,4 @@ spec:
           - name: FILL_PERCENTAGE
             value: "80"
           - name: TARGET_CONTAINER
-            value: "cards-db"
+            value: "carts-db"
