--- a/litmus/cpu-hog.yaml
+++ b/litmus/cpu-hog.yaml
@@ -4,24 +4,21 @@ metadata:
   name: sock-chaos
   namespace: sock-shop
 spec:
-  # It can be app/infra
-  chaosType: 'app'
-  #ex. values: sock-shop:name=carts
+  chaosType: 'infra'  # It can be app/infra
+  #ex. values: ns1:name=percona,ns2:run=nginx
   auxiliaryAppInfo: ""
+  appinfo:
+    appns: sock-shop
+    applabel: 'name=carts-db'
+    appkind: deployment
+  chaosServiceAccount: sock-shop-chaos-engine
+  monitoring: true
   components:
     runner:
       image: "litmuschaos/chaos-executor:1.0.0"
       type: "go"
   # It can be delete/retain
   jobCleanUpPolicy: delete
-  monitoring: true
-  appinfo:
-    appns: sock-shop
-    # FYI, To see app label, apply kubectl get pods --show-labels
-    # unique-label of the application under test (AUT)
-    applabel: "name=carts-db"
-    appkind: deployment
-  chaosServiceAccount: sock-shop-chaos-engine
   experiments:
     - name: cpu-hog
       spec:
