(enhancement) add ramp time for individual experiments to delay chaos injection
Signed-off-by: ksatchit <karthik.s@mayadata.io>

--- a/litmus/container-kill.yaml
+++ b/litmus/container-kill.yaml
@@ -28,3 +28,5 @@ spec:
         components:
         - name: TARGET_CONTAINER
           value: carts-db
+        - name: RAMP_TIME
+          value: "660"
