--- a/litmus/pod-delete.yaml
+++ b/litmus/pod-delete.yaml
@@ -35,3 +35,5 @@ spec:
           # pod failures without '--force' & default terminationGracePeriodSeconds
           - name: FORCE
             value: "false"
+          - name: RAMP_TIME
+            value: "660"
