--- a/litmus/pod-network-latency.yaml
+++ b/litmus/pod-network-latency.yaml
@@ -42,3 +42,5 @@ spec:
             value: "60000"
           - name: LIB
             value: pumba
+          - name: RAMP_TIME
+            value: "660"
