--- a/litmus/disk-fill.yaml
+++ b/litmus/disk-fill.yaml
@@ -31,3 +31,5 @@ spec:
             value: "80"
           - name: TARGET_CONTAINER
             value: "carts-db"
+          - name: RAMP_TIME
+            value: "660"
