Added Kafka cluster and experiment, also improved test function to run across multiple namespaces and initial command support for ramp_time

--- a/deploy/litmus-rbac.yaml
+++ b/deploy/litmus-rbac.yaml
@@ -4,8 +4,6 @@ kind: ServiceAccount
 metadata:
   name: sock-shop-chaos-engine
   namespace: sock-shop
-  labels:
-    app: sock-shop
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
@@ -29,4 +27,34 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: sock-shop-chaos-engine
-  namespace: sock-shop 
+  namespace: sock-shop
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: kafka-chaos-engine
+  namespace: kafka
+---
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: kafka-chaos-engine
+  namespace: kafka
+rules:
+- apiGroups: ["", "extensions", "apps", "batch", "litmuschaos.io"]
+  resources: ["daemonsets", "deployments", "replicasets", "jobs", "pods", "pods/exec","nodes","events", "chaosengines", "chaosexperiments", "chaosresults"]
+  verbs: ["*"]
+---
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: kafka-chaos-engine
+  namespace: kafka
+roleRef:
+  kind: ClusterRole
+  name: kafka-chaos-engine
+  apiGroup: rbac.authorization.k8s.io
+subjects:
+- kind: ServiceAccount
+  name: kafka-chaos-engine
+  namespace: kafka
