(fix) fix rbac for kafka chaos
Signed-off-by: ksatchit <ksatchit@mayadata.io>

--- a/deploy/litmus-rbac.yaml
+++ b/deploy/litmus-rbac.yaml
@@ -42,7 +42,7 @@ metadata:
   namespace: kafka
 rules:
 - apiGroups: ["", "extensions", "apps", "batch", "litmuschaos.io"]
-  resources:  ["pods","deployments","jobs","pod/exec","statefulsets", "nodes", "configmaps", "secrets","chaosengines","chaosexperiments","chaosresults"]
+  resources:  ["pods","deployments","jobs","pods/exec","statefulsets", "nodes", "configmaps", "secrets","chaosengines","chaosexperiments","chaosresults"]
   verbs: ["*"]
 ---
 kind: ClusterRoleBinding
