--- a/litmus/node-cpu-hog.yaml
+++ b/litmus/node-cpu-hog.yaml
@@ -20,7 +20,7 @@ spec:
   # It can be delete/retain
   jobCleanUpPolicy: delete
   experiments:
-    - name: cpu-hog
+    - name: node-cpu-hog
       spec:
         components:
            # set chaos duration (in sec) as desired
