--- a/litmus/pod-delete.yaml
+++ b/litmus/pod-delete.yaml
@@ -5,13 +5,10 @@ metadata:
   namespace: sock-shop
 spec:
   # It can be app/infra
-  chaosType: 'app'
+  annotationCheck: 'true'
+  engineState: 'active'
   #ex. values: sock-shop:name=carts
   auxiliaryAppInfo: ""
-  components:
-    runner:
-      image: "litmuschaos/chaos-executor:1.0.0"
-      type: "go"
   # It can be delete/retain
   jobCleanUpPolicy: delete
   monitoring: true
@@ -26,12 +23,13 @@ spec:
     - name: pod-delete
       spec:
         components:
-           # set chaos duration (in sec) as desired
-          - name: TOTAL_CHAOS_DURATION
-            value: '30'
-          # set chaos interval (in sec) as desired
-          - name: CHAOS_INTERVAL
-            value: '10'
-          # pod failures without '--force' & default terminationGracePeriodSeconds
-          - name: FORCE
-            value: "false"
+          env: 
+             # set chaos duration (in sec) as desired
+             - name: TOTAL_CHAOS_DURATION
+               value: '30'
+             # set chaos interval (in sec) as desired
+             - name: CHAOS_INTERVAL
+               value: '10'
+             # pod failures without '--force' & default terminationGracePeriodSeconds
+             - name: FORCE
+               value: "false"
