--- a/litmus/disk-fill.yaml
+++ b/litmus/disk-fill.yaml
@@ -4,14 +4,11 @@ metadata:
   name: sock-chaos
   namespace: sock-shop
 spec:
-  # It can be app/infra
-  chaosType: 'app'
+  # It can be true/false
+  annotationCheck: 'false'
   #ex. values: sock-shop:name=carts
   auxiliaryAppInfo: ""
-  components:
-    runner:
-      image: "litmuschaos/chaos-executor:1.0.0"
-      type: "go"
+  engineState: 'active'
   # It can be delete/retain
   jobCleanUpPolicy: delete
   monitoring: true
@@ -26,8 +23,9 @@ spec:
     - name: disk-fill
       spec:
         components:
-           # specify the fill percentage according to the disk pressure required
-          - name: FILL_PERCENTAGE
-            value: "80"
-          - name: TARGET_CONTAINER
-            value: "carts-db"
+          env:
+            # specify the fill percentage according to the disk pressure required
+            - name: FILL_PERCENTAGE
+              value: "80"
+            - name: TARGET_CONTAINER
+              value: "carts-db"
