--- a/litmus/pod-cpu-hog.yaml
+++ b/litmus/pod-cpu-hog.yaml
@@ -4,14 +4,11 @@ metadata:
   name: sock-chaos
   namespace: sock-shop
 spec:
-  # It can be app/infra
-  chaosType: 'app'
+  # It can be true/false
+  annotationCheck: 'true'
   #ex. values: sock-shop:name=carts
   auxiliaryAppInfo: ""
-  components:
-    runner:
-      image: "litmuschaos/chaos-executor:1.0.0"
-      type: "go"
+  engineState: 'active'
   # It can be delete/retain
   jobCleanUpPolicy: delete
   monitoring: true
@@ -26,12 +23,13 @@ spec:
     - name: pod-cpu-hog
       spec:
         components:
-          - name: TARGET_CONTAINER
-            value: 'carts-db'
-            #number of cpu cores to be consumed
-            #verify the resources the app has been launched with
-          - name: CPU_CORES
-            value: "1"
-            # in ms
-          - name: TOTAL_CHAOS_DURATION
-            value: "60000"
+          env:
+            - name: TARGET_CONTAINER
+              value: 'carts-db'
+              #number of cpu cores to be consumed
+              #verify the resources the app has been launched with
+            - name: CPU_CORES
+              value: "1"
+              # in ms
+            - name: TOTAL_CHAOS_DURATION
+              value: "60000"
