--- a/litmus/pod-network-corruption.yaml
+++ b/litmus/pod-network-corruption.yaml
@@ -4,14 +4,11 @@ metadata:
   name: sock-chaos
   namespace: sock-shop
 spec:
-  # It can be app/infra
-  chaosType: 'app'
+  # It can be true/false
+  annotationCheck: 'true'
   #ex. values: sock-shop:name=carts
   auxiliaryAppInfo: ""
-  components:
-    runner:
-      image: "litmuschaos/chaos-executor:1.0.0"
-      type: "go"
+  engineState: 'active'
   # It can be delete/retain
   jobCleanUpPolicy: delete
   monitoring: true
@@ -26,11 +23,12 @@ spec:
     - name: pod-network-corruption
       spec:
         components:
-        - name: ANSIBLE_STDOUT_CALLBACK
-          value: default
-        - name: TARGET_CONTAINER
-          #Container name where chaos has to be injected
-          value: "carts-db"
-        - name: NETWORK_INTERFACE
-          #Network interface inside target container
-          value: eth0
+          env:
+            - name: ANSIBLE_STDOUT_CALLBACK
+              value: default
+              #Container name where chaos has to be injected
+            - name: TARGET_CONTAINER
+              value: "carts-db"
+              #Network interface inside target container
+            - name: NETWORK_INTERFACE
+              value: eth0
