--- a/litmus/pod-network-latency.yaml
+++ b/litmus/pod-network-latency.yaml
@@ -4,14 +4,11 @@ metadata:
   name: sock-chaos
   namespace: sock-shop
 spec:
-  # It can be app/infra
-  chaosType: 'app'
-  #ex. values: sock-shop:name=carts
+  # It can be true/false
+  annotationCheck: 'true'
+  # ex. values: sock-shop:name=carts
+  engineState: 'active'
   auxiliaryAppInfo: ""
-  components:
-    runner:
-      image: "litmuschaos/chaos-executor:1.0.0"
-      type: "go"
   # It can be delete/retain
   jobCleanUpPolicy: delete
   monitoring: true
@@ -26,19 +23,20 @@ spec:
     - name: pod-network-latency
       spec:
         components:
-          - name: ANSIBLE_STDOUT_CALLBACK
-            value: default
-          - name: TARGET_CONTAINER
-            #Container name where chaos has to be injected
-            value: "carts-db"
-          - name: NETWORK_INTERFACE
-            #Network interface inside target container
-            value: eth0
-          - name: LIB_IMAGE
-            value: gaiaadm/pumba:0.6.5
-          - name: NETWORK_LATENCY
-            value: "2000"
-          - name: TOTAL_CHAOS_DURATION
-            value: "60000"
-          - name: LIB
-            value: pumba
+          env:
+            - name: ANSIBLE_STDOUT_CALLBACK
+              value: default
+              #Container name where chaos has to be injected
+            - name: TARGET_CONTAINER
+              value: "carts-db"
+              #Network interface inside target container
+            - name: NETWORK_INTERFACE
+              value: eth0
+            - name: LIB_IMAGE
+              value: gaiaadm/pumba:0.6.5
+            - name: NETWORK_LATENCY
+              value: "2000"
+            - name: TOTAL_CHAOS_DURATION
+              value: "60000"
+            - name: LIB
+              value: pumba
