Set Litmus experiment versions, removed need for explicit gathering for all experiments, and increased cluster node size and reduced Kafka pods to stop memory issues

--- a/litmus/container-kill.yaml
+++ b/litmus/container-kill.yaml
@@ -26,3 +26,5 @@ spec:
           env:
             - name: TARGET_CONTAINER
               value: carts-db
+            - name: DEFAULT_GATHERING
+              value: "explicit"
