--- a/litmus/disk-fill.yaml
+++ b/litmus/disk-fill.yaml
@@ -29,3 +29,5 @@ spec:
               value: "80"
             - name: TARGET_CONTAINER
               value: "carts-db"
+            - name: DEFAULT_GATHERING
+              value: "explicit"
