--- a/litmus/pod-cpu-hog.yaml
+++ b/litmus/pod-cpu-hog.yaml
@@ -33,3 +33,5 @@ spec:
               # in ms
             - name: TOTAL_CHAOS_DURATION
               value: "60000"
+            - name: DEFAULT_GATHERING
+              value: "explicit"
