--- a/litmus/pod-delete.yaml
+++ b/litmus/pod-delete.yaml
@@ -33,3 +33,5 @@ spec:
              # pod failures without '--force' & default terminationGracePeriodSeconds
              - name: FORCE
                value: "false"
+             - name: DEFAULT_GATHERING
+               value: "explicit"
