--- a/litmus/pod-network-loss.yaml
+++ b/litmus/pod-network-loss.yaml
@@ -40,3 +40,5 @@ spec:
               value: "60000"
             - name: LIB
               value: pumba
+            - name: DEFAULT_GATHERING
+              value: "explicit"
